# fluid-animations

./: .gitignore  Cargo.toml  README.md  build_demos.sh
src/: 01_diffuse.rs  02_dens_step.rs  03_vector_noise.rs  04_multiple_densities.rs  05_vel_step.rs  06_advect_improved.rs  07_mac_uv.rs  09_buoyancy.rs  10_project2.rs  11_variable_density.rs  12_divergence_control.rs  12a_test_project.rs  13_flame.rs  image.rs  lib.rs  linear.rs  v2.rs
