[package]
name = "fluid-animations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01_diffuse"
path = "src/01_diffuse.rs"

[[bin]]
name = "02_dens_step"
path = "src/02_dens_step.rs"

[[bin]]
name = "03_vector_noise"
path = "src/03_vector_noise.rs"

[[bin]]
name = "04_multiple_densities"
path = "src/04_multiple_densities.rs"

[dependencies]
ndarray = { version = "0.15.0", features = ["rayon"] }
image = "0.23"
anyhow = "1.0"
noise = "0.7.0"
rayon = "1.5"
cgmath = "0.18.0"