[package]
name = "fluid-animations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0", features = ["rayon"] }
image = "0.23"
anyhow = "1.0"
noise = "0.7.0"
rayon = "1.5"
cgmath = "0.18.0"
num-traits = "0.2"

[dev-dependencies]
ndarray-linalg = { version = "0.14", features = ["intel-mkl-static"] }